# instruction-decoding-optimization-research

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
docs/: AArch64-MRA-JSON-Encodeset-Visualization.numbers  instruction-bitmasks-and-bitpatterns.json  mrs-schema-type-list.txt  riscv-instruction-bitmasks-and-bitpatterns.json
include/instdec/: common.hpp  instdec.hpp  utils.hpp
junk/: 4bit-crc.pla  4bit-majority.pla  4bit-majority2-gen.py  4bit-majority2-opt.pla  4bit-majority2.pla  4bit-multiout.pla  CMakeLists.txt  attrs_define.py  bitmatrix.py  blink.v  cattrs_dicts.py  cattrs_dicts_new.py  cattrs_tagged_union.py  count-rambling.cpp  count-z3.py  count.cpp  count_clean.cpp  dummy-empty-c-file.c  espresso-opt-default-lexsort.pla  espresso-opt-default-lexsort.txt  espresso-opt-default.pla  espresso-opt-default.txt  espresso-opt-exact-lexsort-trimmed.txt  espresso-opt-exact-lexsort.pla  espresso-opt-exact-many-lexsort-trimmed.txt  espresso-opt-exact-many-lexsort.pla  espresso-opt-exact-many.pla  espresso-opt-exact.pla  espresso-opt-exact.txt  espresso-trimmed.txt  espresso.pla  espresso.txt  iterate_32bits.py  k.pla  opt-esp.tcl  opt.tcl  pla-to-verilog.v  riscv-espresso-exact-lexsort.pla  riscv-espresso-exact-lexsort.txt  riscv-espresso-exact.pla  (+12 more)
lib/: CMakeLists.txt
lib/instdec/: CMakeLists.txt  utils.cpp
python/src/instdec/: arm_json.py  arm_json_schema.py  cpsat.py  espresso.py  logic.py  pla_file.py  pseudomips.py  search.py  trits.py  util.py  verilog.py
python/src/instdec/tools/: instdec_espresso.py  instdec_tui.py  instdec_util.py  instdec_z3.py
python/tests/: test_pla_file.py
tools/: CMakeLists.txt
tools/instdec-util/: CMakeLists.txt  instdec-util.cpp
