[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9.0", "setuptools-scm>=9.2.2"]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "anytree>=2.13.0",
  "attrs>=25.4.0",
  "cattrs>=25.3.0",
  "ortools>=9.14.6206",
  "path>=17.1.1",
  "portion>=2.6.1",
  "rich>=14.2.0",
  "simplejson>=3.20.2",
  "sympy>=1.14.0",
  "toolz>=1.1.0",
  "z3-solver>=4.15.4.0"
]
description = "Python bindings and utilities for instruction decoding research"
dynamic = ["version"]
keywords = ["instruction decoding", "disassembly", "disassembler"]
license = {text = "BSD-2-Clause"}
name = "instdec"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.5.0",
  "ruff>=0.14.6"
]

[project.scripts]
instdec-py-espresso = "instdec.tools.instdec_espresso:main"
instdec-py-util = "instdec.tools.instdec_util:main"
instdec-py-z3 = "instdec.tools.instdec_z3:main"

[project.urls]
repository = "https://github.com/jevinskie/instruction-decoding-optimization-research"

[tool.ruff]
line-length = 100
preview = true
required-version = ">=0.14"
show-fixes = true
target-version = "py311"
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "PERF", "RUF", "FA", "UP"]

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.dynamic]
version = {attr = "instdec._version.__version__"}

[tool.setuptools_scm]
version_file = "python/src/instdec/_version.py"
